ext/mpg123/gstmpg123audiodec.c
@@ -611,7 +611,6 @@ gst_mpg123_audio_dec_flush (GstAudioDecoder * dec, gboolean hard)
     mpg123_decoder->handle = NULL;
   }
 
-  mpg123_decoder->has_next_audioinfo = FALSE;
 
   /* opening/closing feeds do not affect the format defined by the
    * mpg123_format() call that was made in gst_mpg123_audio_dec_set_format(),
